manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "oh3-22fe"
    labels:
        app: "oh3-22fe"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "oh3-22fe"
